some cleanup and experiments